--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^16.8.6",
     "react-datetime-picker": "^3.2.0",
     "react-dom": "^16.8.6",
-    "react-map-gl": "^5.0.10"
+    "react-map-gl": "^5.0.10",
+    "react-map-gl-geocoder":"^2.1.6"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
