--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "json-loader": "^0.5.7",
     "mapbox-gl": "^1.3.0",
     "ol": "^6.5.0",
+    "package.json": "^2.0.1",
     "react": "^16.8.6",
     "react-datetime-picker": "^3.2.0",
     "react-dom": "^16.8.6",
